--- a/deep/Cargo.toml
+++ b/deep/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Geordon Worley <vadixidav@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-ndarray = "0.13.0"
+strum = "0.16.0"
+strum_macros = "0.16.0"
+rand = "0.7.2"
