--- a/deep-native/Cargo.toml
+++ b/deep-native/Cargo.toml
@@ -8,4 +8,7 @@ edition = "2018"
 deep = { version = "0.1.0", path = "../deep" }
 deep-backend-tools = { version = "0.1.0", path = "../deep-backend-tools" }
 ndarray = "0.13.0"
+rand_core = "0.5.1"
+
+[dev-dependencies]
 rand = "0.7.2"
